Bug 355367, textbox onchange doesn't fire if user tabs out and value changed in onkeydown, r=jst, sr=sicking